--- a/blog/templates/default.html
+++ b/blog/templates/default.html
@@ -2,9 +2,11 @@
     <head>
         <title>Blog</title>
         <style>
+          *{margin: 0; padding: 0;}
+          body {width: 90%; background-color: #e3e502;}
           h2 {text-align: center; font-size: 24px;}
-          h2 a{text-decoration: none; text-color: #000;}
-          h2 a:visited{text-decoration: none; text-color: #000;}
+          h2 a{text-decoration: none; color: #000;}
+          h2 a:visited{text-decoration: none; color: #000;}
         </style>
     </head>
     <body>
