--- a/blog/templates/default.html
+++ b/blog/templates/default.html
@@ -1,35 +1,35 @@
+{% load staticfiles %}
 <html>
     <head>
-        <title>Blog</title>
-        <style>
-          *{margin: 0; padding: 0;}
-          body {width: 90%; background-color: #e3e502;}
-          h2 {text-align: center; font-size: 24px;}
-          h2 a{text-decoration: none; color: #000;}
-          h2 a:visited{text-decoration: none; color: #000;}
-        </style>
+        <title>Men's Blog</title>
+         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-        <div>
-            <h1><a href="">Blog</a></h1>
-        </div>
-
-        <div>
-        {% for post in posts %}
-            {% if post.is_published %}
-            <p>published: {{post.updated}}</p>
-            <h2><a href="">{{post.title}}</a></h2>
-            <p>{{post.content}}</p>
+        <div class="head">
+            {% if user.is_authenticated %}
+                <a href="{% url 'post_new' %}" style="float: right; margin: 5px;" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             {% endif %}
-        {% endfor %}
-
-
+            <h1><a href="/">Men's Blog</a></h1>
+            <div class="clear"></div>
         </div>
 
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My second post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
+        <div class="content">
+            <div class="clear"></div>
+            {% block content %}
+            {% endblock %}
+            <div class="clear"></div>
+        <div class="zag"></div>
+        </div>
+        <div class="clear"></div>
+
+        <div class="footer">
+            <a href="#top">Наверх</a>
+            <div class="clear"></div>
+            <h6>© 2016 Vinigrator. All Rights Reserved.</h6>
+            <div class="clear"></div>
         </div>
     </body>
 </html>
